@@ -15,94 +15,109 @@ import java.util.stream.Stream;
 
 /**
  * A validator for wrapped classes.
- * 
- * @author tstauber
  *
+ * @author tstauber
+ * @since 1.0
  */
 public class WrapperValidationTest {
 
-   /**
-    * Validates that every public method from the wrapped class was wrapped in the wrapper.
-    * 
-    * @param wrapingClass
-    *        The wrapper-class annotated with {@link ILTISWrapper}
-    */
-   public <T> void validate(Class<T> wrapingClass) {
-      List<String> missingMethods = new ArrayList<>();
-      ILTISWrapper wraper = wrapingClass.getAnnotation(ILTISWrapper.class);
-      if (wraper == null) throw new IllegalArgumentException("Class " + wrapingClass.getName() + " is not annotated with an ILTISWrapper!");
-      Class<?> wrapedClass = wraper.value();
+    /**
+     * Validates that every public method from the wrapped class was wrapped in the wrapper.
+     *
+     * @param wrappingClass
+     * The wrapper-class annotated with {@link ILTISWrapper}
+     */
+    public <T> void validate(Class<T> wrappingClass) {
+        List<String> missingMethods = new ArrayList<>();
+        ILTISWrapper wrapper = wrappingClass.getAnnotation(ILTISWrapper.class);
+        if (wrapper == null) throw new IllegalArgumentException("Class " + wrappingClass.getName() + " is not annotated with an ILTISWrapper!");
+        Class<?> wrappedClass = wrapper.value();
 
-      List<Method> wrapeMethods = Arrays.asList(wrapedClass.getMethods());
-      List<Method> wraperMethods;
-      if (wrapedClass.isAssignableFrom(wrapingClass)) {
-         wraperMethods = Stream.of(wrapingClass.getDeclaredMethods()).filter(m -> Modifier.isPublic(m.getModifiers())).collect(Collectors.toList());
-      } else {
-         wraperMethods = Arrays.asList(wrapingClass.getMethods());
-      }
+        List<Method> wrappedClassMethods = Arrays.asList(wrappedClass.getMethods());
+        List<Method> wrapperMethods;
+        if (wrappedClass.isAssignableFrom(wrappingClass)) {
+            wrapperMethods = Stream.of(wrappingClass.getDeclaredMethods()).filter(m -> Modifier.isPublic(m.getModifiers())).collect(Collectors
+                    .toList());
+        } else {
+            wrapperMethods = Arrays.asList(wrappingClass.getMethods());
+        }
 
-      for (Method wrapeeMethod : wrapeMethods) {
-         boolean foundMethod = !wrapeeMethod.getDeclaringClass().getPackage().getName().contains(".internal.");
-         if (!foundMethod) {
-            for (Method wraperMethod : wraperMethods) {
-               foundMethod |= compareMethods(wrapeeMethod, wraperMethod);
+        for (Method wrappingCandidateMethod : wrappedClassMethods) {
+            if (needsWrapping(wrappingCandidateMethod) && noneWraps(wrapperMethods, wrappingCandidateMethod)) {
+                missingMethods.add(getMethodSignature(wrappingCandidateMethod));
             }
-         }
+        }
+        String link = " (" + wrappingClass.getSimpleName() + ".java:" + 1 + ")";
+        assertTrue("Missing methods in " + link + ". Proposal: \n" + toString(missingMethods, "", "\n\n", "", Object::toString), missingMethods
+                .isEmpty());
+    }
 
-         if (!foundMethod) missingMethods.add(getMethodSignature(wrapeeMethod));
-      }
-      String link = " (" + wrapingClass.getSimpleName() + ".java:" + 1 + ")";
-      assertTrue("Missing methods in " + link + ". Proposal: \n" + toString(missingMethods, "", "\n\n", "", Object::toString), missingMethods
-            .isEmpty());
-   }
+    private static boolean noneWraps(List<Method> wrapperMethods, Method wrappingCandidateMethod) {
+        return !(wrapperMethods.stream().anyMatch(wrapperMethod -> doesWrap(wrappingCandidateMethod, wrapperMethod)));
+    }
 
-   private boolean compareMethods(Method wrapeeMethod, Method wraperMethod) {
-      Class<?>[] wrapeeParameterTypes = wrapeeMethod.getParameterTypes();
-      if (wrapeeMethod.getName().equals(wraperMethod.getName())) {
-         wrapeeMethod.getReturnType().getName().equals(wraperMethod.getReturnType().getName());
-         Class<?>[] wraperParameterTypes = wraperMethod.getParameterTypes();
-         if (wrapeeParameterTypes.length == wraperParameterTypes.length) {
-            if (wrapeeParameterTypes.length > 0) {
-               for (Class<?> p1 : wrapeeParameterTypes) {
-                  for (Class<?> p2 : wraperParameterTypes) {
-                     if (p1.getName().equals(p2.getName())) { return true; }
-                  }
-               }
-            } else {
-               return true;
+    private static boolean needsWrapping(Method wrappingCandidateMethod) {
+        /* Methods on non internal (super)classes don't have to be wrapped */
+        //TODO implement using ExportPackageObject.isInternal()
+        boolean isInternal = wrappingCandidateMethod.getDeclaringClass().getPackage().getName().contains(".internal.");
+        /* Static methods do not need to be wrapped */
+        boolean isStatic = !Modifier.isStatic(wrappingCandidateMethod.getModifiers());
+
+        return !isInternal && !isStatic;
+    }
+
+    private static boolean doesWrap(Method wrappeeMethod, Method wrapperMethod) {
+        Class<?>[] wrappeeParameterTypes = wrappeeMethod.getParameterTypes();
+        if (wrappeeMethod.getName().equals(wrapperMethod.getName())) {
+            wrappeeMethod.getReturnType().getName().equals(wrapperMethod.getReturnType().getName());
+            Class<?>[] wrapperParameterTypes = wrapperMethod.getParameterTypes();
+            if (wrappeeParameterTypes.length == wrapperParameterTypes.length) {
+                if (wrappeeParameterTypes.length > 0) {
+                    for (Class<?> p1 : wrappeeParameterTypes) {
+                        for (Class<?> p2 : wrapperParameterTypes) {
+                            if (p1.getName().equals(p2.getName())) {
+                                return true;
+                            }
+                        }
+                    }
+                } else {
+                    return true;
+                }
             }
-         }
-      }
-      return wrapeeMethod.isAnnotationPresent(Deprecated.class);
-   }
+        }
+        return wrappeeMethod.isAnnotationPresent(Deprecated.class);
+    }
 
-   protected String getMethodSignature(Method m) {
-      return "public " + m.getReturnType().getSimpleName() + " " + generateSignature(m) + " {\n   return " + m.getDeclaringClass().getName() + "." +
-             generateCall(m) + ";\n}";
-   }
+    /**
+     * @since 2.0
+     */
+    protected static String getMethodSignature(Method m) {
+        return "@Override\npublic " + m.getReturnType().getSimpleName() + " " + generateSignature(m) + " {\n   return " + m.getDeclaringClass()
+                .getName() + "." + generateCall(m) + ";\n}";
+    }
 
-   private String generateSignature(Method m) {
-      return m.getName() + toString(m.getParameters(), "(", ", ", ")", param -> param.getType().getSimpleName() + " " + param.getName());
-   }
+    private static String generateSignature(Method m) {
+        return m.getName() + toString(m.getParameters(), "(", ", ", ")", param -> param.getType().getSimpleName() + " " + param.getName());
+    }
 
-   private String generateCall(Method m) {
-      return m.getName() + toString(m.getParameters(), "(", ", ", ")", Parameter::getName);
-   }
+    private static String generateCall(Method m) {
+        return m.getName() + toString(m.getParameters(), "(", ", ", ")", Parameter::getName);
+    }
 
-   private static <O> String toString(Iterable<O> it, String prefix, String separator, String postfix, Function<O, String> fun) {
-      StringBuffer buff = new StringBuffer(prefix);
-      boolean isFirst = true;
-      for (O o : it) {
-         if (!isFirst) buff.append(separator);
-         buff.append(fun.apply(o));
-         isFirst = false;
-      }
-      buff.append(postfix);
-      return buff.toString();
-   }
+    private static <O> String toString(Iterable<O> it, String prefix, String separator, String postfix, Function<O, String> fun) {
+        StringBuffer buff = new StringBuffer(prefix);
+        boolean isFirst = true;
+        for (O o : it) {
+            if (!isFirst) buff.append(separator);
+            buff.append(fun.apply(o));
+            isFirst = false;
+        }
+        buff.append(postfix);
+        return buff.toString();
+    }
 
-   public static <O> String toString(O[] it, String prefix, String separator, String postfix, Function<O, String> fun) {
-      return toString(Arrays.asList(it), prefix, separator, postfix, fun);
-   }
+    public static <O> String toString(O[] it, String prefix, String separator, String postfix, Function<O, String> fun) {
+        return toString(Arrays.asList(it), prefix, separator, postfix, fun);
+    }
 
 }
